[gd_scene load_steps=6 format=3 uid="uid://bxbpvfo7qhqyb"]

[ext_resource type="Script" path="res://Scripts/OptionMenu.gd" id="1_ujvnu"]
[ext_resource type="Script" path="res://Scripts/AudioOptions.gd" id="2_trynk"]

[sub_resource type="LabelSettings" id="LabelSettings_vqmx4"]
font_size = 25

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_t87ev"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lktsh"]
bg_color = Color(0, 0, 0, 0.862745)

[node name="OptionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ujvnu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.458824)

[node name="AudioOptions" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_trynk")

[node name="HBoxContainer" type="VBoxContainer" parent="AudioOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -147.0
offset_right = 252.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterLabel" type="Label" parent="AudioOptions/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Master volume"
label_settings = SubResource("LabelSettings_vqmx4")

[node name="MasterSlider" type="HSlider" parent="AudioOptions/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="BackgroundMusicLabel" type="Label" parent="AudioOptions/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Background music volume"
label_settings = SubResource("LabelSettings_vqmx4")

[node name="BackgroundMusicSlider" type="HSlider" parent="AudioOptions/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="SoundEffectsLabel" type="Label" parent="AudioOptions/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SFX volume"
label_settings = SubResource("LabelSettings_vqmx4")

[node name="SoundEffectsSlider" type="HSlider" parent="AudioOptions/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.05

[node name="Button_Save" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_t87ev")
offset_left = 432.0
offset_top = 480.0
offset_right = 720.0
offset_bottom = 568.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_lktsh")
text = "Speichern"

[connection signal="mouse_exited" from="AudioOptions/HBoxContainer/MasterSlider" to="." method="_on_master_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/HBoxContainer/MasterSlider" to="AudioOptions" method="_on_master_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/HBoxContainer/BackgroundMusicSlider" to="AudioOptions" method="_on_background_music_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioOptions/HBoxContainer/SoundEffectsSlider" to="AudioOptions" method="_on_sound_effects_slider_mouse_exited"]
[connection signal="pressed" from="Button_Save" to="." method="_on_button_save_pressed"]
